@@ -5,7 +5,6 @@ import ast.interfaces.ASTNode;
 import token.Token;
 
 import java.util.List;
-import java.util.Objects;
 
 public class DeclarationASTBuilder implements ASTBuilder<ASTNode> {
     private final String version;
@@ -18,56 +17,43 @@ public class DeclarationASTBuilder implements ASTBuilder<ASTNode> {
 
     @Override
     public boolean verify(List<Token> statement) {
-        if (statement.isEmpty()) {
-            return false;
-        } else if (!Objects.equals(statement.get(0).getType(), "KEYWORD")) {
-            return false;
-        } else if (!Objects.equals(statement.get(1).getType(), "IDENTIFIER")) {
-            return false;
-        } else if (!Objects.equals(statement.get(2).getType(), "DECLARE")) {
-            return false;
-        } else return Objects.equals(statement.get(3).getType(), "TYPE");
+        return statement.size() >= 4
+                && "KEYWORD".equals(statement.get(0).getType())
+                && "IDENTIFIER".equals(statement.get(1).getType())
+                && "DECLARE".equals(statement.get(2).getType())
+                && "TYPE".equals(statement.get(3).getType());
     }
 
     @Override
     public ASTNode build(List<Token> statement) {
-        if(statement.size() > 4 && Objects.equals(statement.get(4).getType(), "ASSIGN")){
+        if (statement.size() > 4 && "ASSIGN".equals(statement.get(4).getType())) {
             return getDeclarationAssignation(statement);
-        }else{
+        } else {
             return getDeclaration(statement);
         }
     }
 
     private Declaration getDeclaration(List<Token> statement) {
-        if(Objects.equals(statement.getFirst().getValue(), "const")){
-            if(Objects.equals(version, "1.0")){
-                throw new IllegalStateException("Invalid keyword 'const'");
-            }else{
-                throw new IllegalStateException("A const variable should have a value assigned");
+        String keyword = statement.get(0).getValue();
+        if ("const".equals(keyword)) {
+            switch (version){
+                case "1.0" : throw new IllegalStateException("Invalid keyword 'const'");
+                case "1.1": throw new IllegalStateException("const variable should have a value assigned");
             }
-        }else{
-            return new Declaration(statement.get(1).getValue(), statement.get(3).getValue());
         }
+        return new Declaration(statement.get(1).getValue(), statement.get(3).getValue());
     }
 
     private DeclarationAssignation getDeclarationAssignation(List<Token> statement) {
-        if(Objects.equals(statement.getFirst().getValue(), "const")){
-            if(Objects.equals(version, "1.0")){
-                throw new IllegalStateException("Invalid keyword 'const'");
-            }else{
-                return new DeclarationAssignation(
-                        new Declaration(statement.get(1).getValue(), statement.get(3).getValue()),
-                        valueASTBuilder.build(statement.subList(5, statement.size())),
-                        true
-                );
-            }
-        }else{
-            return new DeclarationAssignation(
-                    new Declaration(statement.get(1).getValue(), statement.get(3).getValue()),
-                    valueASTBuilder.build(statement.subList(5, statement.size())),
-                    false
-            );
+        boolean isConst = "const".equals(statement.get(0).getValue());
+        if (isConst && "1.0".equals(version)) {
+            throw new IllegalStateException("Invalid keyword 'const'");
         }
+        return new DeclarationAssignation(
+                new Declaration(statement.get(1).getValue(), statement.get(3).getValue()),
+                valueASTBuilder.build(statement.subList(5, statement.size())),
+                isConst
+        );
     }
 }
 
